--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -390,3 +390,12 @@ body {
 }
 
 
+
+
+
+#the-site-uri{
+  background-color: rgb(46, 46, 46);
+  border-radius: 5px;
+  padding: 2px;
+  color: white;
+}
